src/sass/components/_icons.scss
/* ... */
#{$icons-selector} {
  &.icon {
    background-image: none;
  }
}

// Checkbox toggler

a.toggle-checkboxes {
  @include variants.fa-icon-style;

  &::before {
    @include variants.fa-icon-variant(fa-variables.$fa-var-square-check);
  }
}


// Colorize some actions

a.icon,
a.icon-only {
  @include variants.link-variant(default);
}

a.icon-edit::before,
a.icon-copy::before,
a.icon-time-add::before,
.other-formats a::before {
  @include variants.link-variant(info);
}

.icon-checked::before {
  @include variants.link-variant(success, false);
}

a.icon-add::before,
a.icon-save::before,
a.icon-checked::before,
a.icon-reload::before,
.other-formats a.csv::before {
  @include variants.link-variant(success);
}

.other-formats > span > a.atom::before {
  @include variants.link-variant(warning);
}

a.icon-del::before,
a.icon-bookmark::before,
.other-formats a.pdf::before {
  @include variants.link-variant(danger);
}


// File types

.icon-folder,
.icon-file {
  &::before {
    width: variables.$icon-width;
    text-align: center;
  }
}

.icon-file {
  &::before {
    @include variants.fa-icon-variant(fa-variables.$fa-var-file);

    color: variables.$gray-700;
  }

  &.text-plain::before         { @include variants.fa-icon-variant(fa-variables.$fa-var-file-lines); }
  &.text-x-c::before           { @include variants.fa-icon-variant(fa-variables.$fa-var-file-code); }
  &.text-x-csharp::before      { @include variants.fa-icon-variant(fa-variables.$fa-var-file-code); }
  &.text-x-java::before        { @include variants.fa-icon-variant(fa-variables.$fa-var-file-code); }
  &.text-x-php::before         { @include variants.fa-icon-variant(fa-variables.$fa-var-file-code); }
  &.text-x-ruby::before        { @include variants.fa-icon-variant(fa-variables.$fa-var-file-code); }
  &.text-xml::before           { @include variants.fa-icon-variant(fa-variables.$fa-var-file-code); }
  &.text-css::before           { @include variants.fa-icon-variant(fa-variables.$fa-var-file-code); }
  &.text-html::before          { @include variants.fa-icon-variant(fa-variables.$fa-var-file-code); }
  &.text-x-sh::before          { @include variants.fa-icon-variant(fa-variables.$fa-var-file-lines); }

  &.application-javascript::before,
  &.text-x-javascript::before { @include variants.fa-icon-variant(fa-variables.$fa-var-file-code); }

  &.application-pdf::before    { @include variants.fa-icon-variant(fa-variables.$fa-var-file-pdf); }
  &.application-msword::before { @include variants.fa-icon-variant(fa-variables.$fa-var-file-word); }

  &.application-vnd\.openxmlformats-officedocument\.spreadsheetml\.sheet::before,
  &.application-vnd\.ms-excel::before { @include variants.fa-icon-variant(fa-variables.$fa-var-file-excel); }

  &.image-vnd\.microsoft\.icon::before,
  &.image-gif::before,
  &.image-jpeg::before,
  &.image-png::before,
  &.image-tiff::before {
    @include variants.fa-icon-variant(fa-variables.$fa-var-file-image);
  }

  &.application-zip::before,
  &.application-x-gzip::before {
    @include variants.fa-icon-variant(fa-variables.$fa-var-file-zipper);
  }
}

.icon-expended,
.icon-collapsed {
  &::before {
    text-align: center;
  }

  &.expander {
    background-image: none;
  }
}

.icon-zoom-in + .icon-zoom-out {
  margin-left: variables.$padding-small-vertical;
}


// Administration menu sections

%admin-icon {
  @include variants.fa-icon-style;

  &:hover::before {
    color: variables.$gray-900;
  }

  &.selected::before {
    color: variables.$gray-950;
  }
}

#admin-menu {
  #admin-index > & {
    a {
      padding-left: 5px + variables.$icon-width;
    }
  }

  li {
    > a {
      padding-left: variables.$sidebar-padding-horizontal + 5px + variables.$icon-width;

      &::before {
        display: inline-block;
        width: variables.$icon-width;
        margin: 0;
        margin-left: -(5px + variables.$icon-width);
        padding: 0;
        color: variables.$gray-700;
        text-align: center;
      }
    }
  }

  .projects {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-cubes); }
  }

  .users {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-user); }
  }

  .groups {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-people-group); }
  }

  .roles {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-eye); }
  }

  .trackers {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-ticket); }
  }

  .issue-statuses,
  .issue_statuses {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-pencil-square); }
  }

  .workflows {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-sitemap); }
  }

  .custom-fields,
  .custom_fields {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-edit); }
  }

  .enumerations {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-list); }
  }

  .settings {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-gear); }
  }

  .plugins {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-puzzle-piece); }
  }

  .info {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-info-circle); }
  }

  .ldap-authentication,
  .server_authentication {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-key); }
  }

  .redmine-banner {
    @extend %admin-icon;

    &::before { @include variants.fa-icon-variant(fa-variables.$fa-var-circle-exclamation); }
  }
}
/* ... */

